# University-Backend

./: .env.example  Procfile  README.md  auto-commit.sh  db.sqlite3  pyproject.toml  requirements.txt
university/: admin.py  models.py  serializers.py  urls.py  views.py
university/migrations/: 0001_initial.py  0002_partnershipdiscussion.py
universityportal/: asgi.py  settings.py  urls.py  wsgi.py
